[tool.poetry]
name = "exec-notifier"
version = "0.1.9"
description = "Tool to notify you when command will be executed."
authors = ["Ivan Kuznetsov <tikerlade@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
exec_notifier = "exec_notifier:main"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.8"
poetry-dynamic-versioning = "0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
