[tool.poetry]
name = "exec-notifier"
version = "0.1.28"
description = "Tool to notify you when command will be executed."
authors = ["Ivan Kuznetsov <tikerlade@gmail.com>"]
repository = "https://github.com/tikerlade/exec-notifier"
homepage = "https://github.com/tikerlade/exec-notifier"
readme = "README.md"

[tool.poetry.scripts]
exec_notifier = "exec_notifier:main"

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
